# pydantic-ai-app

./: .env.example  .gitignore  README.md  pyproject.toml  skills-lock.json
src/pyd_app/: __init__.py  __main__.py  assistant.py  calendar_tools.py  config.py  hello_world.py  observability.py  web.py
tests/: conftest.py  test_assistant.py  test_calendar_tools.py  test_hello_world.py  test_observability.py  test_web.py
